--- a/data-pipeline/src/main/resources/application.properties
+++ b/data-pipeline/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 #logging.level.org.springframework=DEBUG
 
-kafka.bootstrap.servers=localhost:9092
+#kafka.bootstrap.servers=localhost:9092
+kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS}
 kafka.consumer.group-id=my-consumer-group
 kafka.consumer.auto-offset-reset=earliest
+
+data-models-directory=data-models
