Updated code - June 24

--- a/data-pipeline/src/main/resources/application.properties
+++ b/data-pipeline/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #logging.level.org.springframework=DEBUG
 
-#kafka.bootstrap.servers=localhost:9092
-kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS}
+kafka.bootstrap.servers=localhost:9092
+#kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS}
 kafka.consumer.group-id=my-consumer-group
 kafka.consumer.auto-offset-reset=earliest
 
