Database Connection setup. MongoDB compatible.

--- a/data-pipeline/src/main/resources/application.properties
+++ b/data-pipeline/src/main/resources/application.properties
@@ -2,9 +2,21 @@ app.baseurl=http://localhost:8080
 
 #logging.level.org.springframework=DEBUG
 
-kafka.bootstrap.servers=localhost:9092
-#kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS}
-kafka.consumer.group-id=my-consumer-group
-kafka.consumer.auto-offset-reset=earliest
+db-name=datasurge
 
 data-models-directory=data-models
+
+kafka.bootstrap.servers=kafka-1,kafka-2
+kafka.consumer.group-id=datasurge
+kafka.consumer.auto-offset-reset=earliest
+
+hbase.server=zookeeper-1,zookeeper-2,zookeeper-3
+hbase.zookeeper.property.clientPort=2181
+
+spring.data.cassandra.contact-points=cassandra
+spring.data.cassandra.port=9042
+spring.data.cassandra.keyspace=datasurge
+
+mongodb.server=mongodb
+mongodb.port=27017
+mongodb.database=datasurge
