--- a/data-pipeline/docker-compose.yml
+++ b/data-pipeline/docker-compose.yml
@@ -19,17 +19,28 @@ services:
       - 32181:2181
     networks:
       - data-network
+
+  zookeeper-3:
+    image: confluentinc/cp-zookeeper:latest
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - 42181:2181
+    networks:
+      - data-network
   
   kafka-1:
     image: confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper-1
       - zookeeper-2
+      - zookeeper-3
     ports:
       - 29092:29092
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:2181,zookeeper-2:2181
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:2181,zookeeper-2:2181,zookeeper-3:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-1:9092,PLAINTEXT_HOST://localhost:29092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
@@ -46,14 +57,44 @@ services:
       - 39092:39092
     environment:
       KAFKA_BROKER_ID: 2
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:2181,zookeeper-2:2181
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:2181,zookeeper-2:2181,zookeeper-3:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-2:9092,PLAINTEXT_HOST://localhost:39092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     networks:
       - data-network
-  
+
+#  hbase-master:
+#    image: dajobe/hbase-base:2.1.3
+#    command: master
+#    ports:
+#      - 16000:16000
+#      - 16010:16010
+#    networks:
+#      - data-network
+
+#  cassandra:
+#    image: cassandra:latest
+#    container_name: cassandra-container
+#    ports:
+#      - 9042:9042
+#    environment:
+#      - MAX_HEAP_SIZE=256M
+#      - HEAP_NEWSIZE=128M
+#    networks:
+#      - data-network
+
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb
+    restart: always
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb:/data/db
+    networks:
+      - data-network
 
   data-pipe:
     build:
@@ -66,15 +107,21 @@ services:
     depends_on:
       - kafka-1
       - kafka-2
+      - mongodb
     networks:
       - data-network
 
   console-consumer:
     image: confluentinc/cp-kafka:latest
     command: kafka-console-consumer --bootstrap-server kafka-1:9092,kafka-2:9092 --topic data-topic --from-beginning
+    depends_on:
+      - mongodb
     networks:
       - data-network
 
 networks:
   data-network:
     driver: bridge
+
+volumes:
+  mongodb: {}
