--- a/data-pipeline/pom.xml
+++ b/data-pipeline/pom.xml
@@ -114,6 +114,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.squareup</groupId>
+			<artifactId>javapoet</artifactId>
+			<version>1.13.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.hbase</groupId>
 			<artifactId>hbase-client</artifactId>
 			<version>2.5.5</version>
